fixed current section (was not responsive)

--- a/app/assets/styles/modules_about/_current.css
+++ b/app/assets/styles/modules_about/_current.css
@@ -4,21 +4,21 @@
 
     h2 {
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 5rem;
     }
     .cur-container {
       min-height: 60vh;
       width: 80%;
       margin: auto;
       display: flex;
-      align-items: center;
+      justify-content: space-between;
       flex-wrap: wrap;
 
       .block1,
       .block2,
       .block3 {
-        flex: 30rem;
-        transform: translateX(25%);
+        display: flex;
+        flex-direction: column;
         margin-bottom: 3rem;
 
         .pic {
@@ -48,10 +48,13 @@
   #current {
     .big-cur-container {
       .cur-container {
+        justify-content: center;
+
         .block1,
         .block2,
         .block3 {
-          transform: translateX(0%);
+          margin: 0rem 2rem;
+
           h4 {
             font-size: 2.2rem;
           }
